updated styling, alignment, links

--- a/css/_bottombanner.scss
+++ b/css/_bottombanner.scss
@@ -14,7 +14,7 @@
 .bottom-banner a {
 	color: white;
 	display: block;
-	background-color: #003F91;
+	background-color: #161925;
 	padding: 14px 40px;
 	width: 200px;
 	font-size: 1.1rem;
