--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,11 +1,11 @@
 /* header styles */
 header {
-	background-color: #003F91;
+	background-color: #53687E;
 	height: 90px;
 }
 
 header .container {
-	background-color: #003F91;
+	background-color: #53687E;
 	padding: 0 30px;
 	display: flex;
 	flex-wrap: wrap;
