--- a/css/_header.scss
+++ b/css/_header.scss
@@ -91,7 +91,7 @@ header nav a:focus {
 		display: none;
 		width: 100%;
 		clear: both;
-		background-color: #003F91;
+		background-color: #53687E;
 	}
 
 	header nav ul {
