--- a/css/main.css
+++ b/css/main.css
@@ -2,77 +2,104 @@
 footer {
   background-color: #272D2D;
   color: white;
-  padding: 30px; }
+  padding: 30px;
+}
 
 footer a {
-  color: white; }
+  color: white;
+}
 
 footer a:hover,
 footer a:active,
 footer a:focus {
-  color: white; }
+  color: white;
+}
 
 @media screen and (max-width: 400px) {
   footer {
-    padding: 20px; } }
+    padding: 20px;
+  }
+}
+
 /* header styles */
 header {
   background-color: #53687E;
-  height: 90px; }
+  height: 90px;
+}
 
 header .container {
   background-color: #53687E;
   padding: 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 
 header a {
-  color: white; }
+  color: white;
+}
 
 header a:hover,
 header a:active,
 header a:focus {
-  color: white; }
+  color: white;
+}
 
 header h1 {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 header h1 a {
   margin: 0;
   line-height: 90px;
   font-size: 3rem;
-  float: left; }
+  float: left;
+}
 
 /* header navigation styles */
 .btn-menu {
-  display: none; }
+  display: none;
+}
 
 header nav {
-  width: 600px; }
+  width: 600px;
+}
 
 header nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 
 header nav li {
-  flex: 1; }
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
 
 header nav a {
   display: block;
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
-  line-height: 90px; }
+  line-height: 90px;
+}
 
 header nav a:hover,
 header nav a:active,
 header nav a:focus {
   color: white;
   background-color: rgba(255, 255, 255, 0.3);
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 @media screen and (max-width: 900px) {
   /* responsive navigation */
@@ -83,108 +110,132 @@ header nav a:focus {
     font-size: 1.3rem;
     color: white;
     text-transform: uppercase;
-    line-height: 90px; }
-
+    line-height: 90px;
+  }
   .btn-menu:focus {
-    outline: 1px solid rgba(255, 255, 255, 0.3); }
-
+    outline: 1px solid rgba(255, 255, 255, 0.3);
+  }
   header nav {
     display: none;
     width: 100%;
     clear: both;
-    background-color: #003F91; }
-
+    background-color: #53687E;
+  }
   header nav ul {
-    display: block; }
-
+    display: block;
+  }
   header nav li {
-    width: 100%; }
-
+    width: 100%;
+  }
   header nav a {
     display: block;
     line-height: 40px;
-    text-align: center; }
-
+    text-align: center;
+  }
   .show header {
-    height: auto; }
-
+    height: auto;
+  }
   .show header nav {
-    display: block; } }
+    display: block;
+  }
+}
+
 @media screen and (max-width: 560px) {
   header {
-    height: 70px; }
-
+    height: 70px;
+  }
   header h1 a {
     line-height: 70px;
-    font-size: 2.5rem; }
-
+    font-size: 2.5rem;
+  }
   .btn-menu {
     line-height: 70px;
-    font-size: 1.2rem; } }
+    font-size: 1.2rem;
+  }
+}
+
 @media screen and (max-width: 400px) {
   section {
-    padding: 20px; }
-
+    padding: 20px;
+  }
   header .container {
-    padding: 0 20px; } }
+    padding: 0 20px;
+  }
+}
+
 /* top banner styles */
 .top-banner {
-  padding: 50px 0; }
+  padding: 50px 0;
+}
 
 .top-banner h2 {
   font-size: 4rem;
   text-align: center;
-  line-height: 1.2; }
+  line-height: 1.2;
+}
 
 .top-banner h3 {
   font-size: 2rem;
   text-align: center;
-  line-height: 1.2; }
+  line-height: 1.2;
+}
 
 .top-banner p {
   text-align: center;
   font-size: 2rem;
   margin: 0;
-  line-height: 1.2; }
+  line-height: 1.2;
+}
 
 @media screen and (max-width: 900px) {
   /* top banner */
   .top-banner {
-    padding: 10vw 0; }
-
+    padding: 10vw 0;
+  }
   .top-banner h2 {
-    font-size: 7vw; }
-
+    font-size: 7vw;
+  }
   .top-banner h3 {
-    font-size: 4vw; }
-
+    font-size: 4vw;
+  }
   .top-banner p {
-    font-size: 3.5vw; } }
+    font-size: 3.5vw;
+  }
+}
+
 /* mid banner styles */
 .mid-banner {
-  position: relative; }
+  position: relative;
+}
 
 .mid-banner h2 {
   color: white;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 3rem; }
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 3rem;
+}
 
 @media screen and (max-width: 900px) {
   .mid-banner h2 {
-    font-size: 7vw; } }
+    font-size: 7vw;
+  }
+}
+
 /* bottom banner styles */
 .bottom-banner {
   background-color: #F2F2F2;
-  padding: 90px 0; }
+  padding: 90px 0;
+}
 
 .bottom-banner p {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   font-size: 2.5rem;
-  text-align: center; }
+  text-align: center;
+}
 
 .bottom-banner a {
   color: white;
@@ -196,53 +247,74 @@ header nav a:focus {
   font-weight: bold;
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 @media screen and (max-width: 900px) {
   .bottom-banner {
-    padding: 30px; } }
+    padding: 30px;
+  }
+}
+
 /* Grid Styles */
 .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 
 /* Grid Column Widths */
 .one-half {
-  width: 48%; }
+  width: 48%;
+}
 
 .one-third {
-  width: 30.6666666667%; }
+  width: 30.6666666667%;
+}
 
 @media screen and (max-width: 560px) {
   /* Make Grid Columns 
-     Single Columns on Mobile */
+	   Single Columns on Mobile */
   .one-half,
   .one-third {
-    width: 100%; } }
+    width: 100%;
+  }
+}
+
 h1, h2, h3, nav a {
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Montserrat', sans-serif;
+}
 
 /* typography */
 body {
   font-family: 'Karla', sans-serif;
-  background-color: #ebebeb; }
+  background-color: #ebebeb;
+}
 
 /* process styles */
 .process {
-  padding: 30px; }
+  padding: 30px;
+}
 
 .process > h1 {
   text-align: center;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+}
 
 .process article h1 {
-  text-align: center; }
+  text-align: center;
+}
 
 /* Responsive Images Reset */
 img {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+}
 
 /* Container Styles */
 .container {
@@ -251,6 +323,6 @@ img {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0; }
-
+  padding: 0;
+}
 /*# sourceMappingURL=main.css.map */
