--- a/css/_topbanner.scss
+++ b/css/_topbanner.scss
@@ -2,12 +2,17 @@
 
 .top-banner {
 	padding: 50px 0;
+	display: flex; 
+	justify-content: center;
+	background-image: url('../images/bright_squares_@2X.png');
 }
 
 .top-banner h2 {
-	font-size: 4rem;
+	font-size: 3rem;
 	text-align: center;
 	line-height: 1.2;
+	padding-left: 20px;
+	font-family: 'Archivo Black'
 }
 
 .top-banner h3 {
@@ -27,15 +32,22 @@
 		
     /* top banner */
 	.top-banner {
-		padding: 10vw 0;
+		padding: 1vw;
+		display: block;	
 	}
+
+	.bcitlogo {
+	 	display:flex;
+		 justify-content: center;
+		 padding: 1vw;
+	 }
 	
 	.top-banner h2 {
-		font-size: 7vw;
+		font-size: 5vw;
 	}
 
 	.top-banner h3 {
-		font-size: 4vw;
+		font-size: 3vw;
 	}
 	
 	.top-banner p {
