--- a/css/_header.scss
+++ b/css/_header.scss
@@ -98,7 +98,7 @@ header nav a:focus {
 		display: none;
 		width: 100%;
 		clear: both;
-		background-color: #53687E;
+		background-color: #1C3F77;
 	}
 
 	header nav ul {
