--- a/css/_contactForm.scss
+++ b/css/_contactForm.scss
@@ -1,6 +1,6 @@
 .contactForm {
     text-align:center;
-    background-color: #b4c9ea;
+    background-color: #dee4ed;
     padding: 50px;
     margin-left: 10%;
     margin-right:10%
