--- a/css/_bottombanner.scss
+++ b/css/_bottombanner.scss
@@ -24,6 +24,11 @@
 	margin: 0 auto;
 }
 
+.bottom-banner a:hover{
+	text-decoration: none;
+	color:#E26D5C;
+}
+
 @media screen and (max-width: 900px){
 		
 
