--- a/css/_process.scss
+++ b/css/_process.scss
@@ -11,3 +11,13 @@
 .process article h1 {
 	text-align: center;
 }
+
+.process a{
+	color: #1A659E;
+	font-size: 2rem;
+}
+
+.process a:hover{
+	text-decoration: none;
+	color: #E26D5C;
+}
