--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -6,12 +6,18 @@ footer {
 
 footer a {
 	color: white;
+	
+}
+
+footer h2{
+	font-family: 'Archivo Black','sans-serif'
 }
 
 footer a:hover,
 footer a:active,
 footer a:focus {
-	color: white;
+	color: #E26D5C;
+	text-decoration: none;
 }
 
 @media screen and (max-width: 400px){
