--- a/css/_topbanner.scss
+++ b/css/_topbanner.scss
@@ -12,7 +12,7 @@
 	text-align: center;
 	line-height: 1.2;
 	padding-left: 20px;
-	font-family: 'Archivo Black'
+	font-family: 'Archivo Black','sans-serif'
 }
 
 .top-banner h3 {
